RESOLVED FIXED301628
WebKit::DataDetectionResults should re-use DDScannerResult instead of passing across an opaque NSArray.
https://bugs.webkit.org/show_bug.cgi?id=301628
Summary WebKit::DataDetectionResults should re-use DDScannerResult instead of passing...
Gavin
Reported 2025-10-29 08:20:41 PDT
WebKit::DataDetectionResults should re-use DDScannerResult instead of passing across an opaque NSArray.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-29 08:22:21 PDT
Gavin
Comment 2 2025-10-29 08:25:00 PDT
EWS
Comment 3 2025-11-04 15:04:54 PST
Committed 302560@main (72ab7791cf7b): <https://commits.webkit.org/302560@main> Reviewed commits have been landed. Closing PR #53143 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.