WebKit::DataDetectionResults should re-use DDScannerResult instead of passing across an opaque NSArray. https://bugs.webkit.org/show_bug.cgi?id=301628 rdar://163644363

Reviewed by Per Arne Vollan.

Replaces the IPC implementation of WebKit::DataDetectionResults to instead
serialize and explicit Vector of DDScannerResults.

* Source/WebKit/Shared/Cocoa/DataDetectionResult.h:
* Source/WebKit/Shared/Cocoa/DataDetectionResult.mm: Copied from Source/WebKit/Shared/Cocoa/DataDetectionResult.h.
(WebKit::DataDetectionResult::setResults):
* Source/WebKit/Shared/Cocoa/DataDetectionResult.serialization.in:
* Source/WebKit/UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::setDataDetectionResult):
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::setDataDetectionResults):
(WebKit::detectDataInFrame):

Canonical link: https://commits.webkit.org/302560@main